# linkedin-jobs-connector

./: .env.example  .gitignore  CLAUDE_SETUP.md  README.md  UPLOAD_GUIDE.md  connector.manifest.json  pyproject.toml
examples/: connections.csv  jobs.json
scripts/: package_zip.py
src/linkedin_connector/: auth.py  cache.py  config.py  http_api.py  mcp_server.py  models.py  retry.py  services.py
src/linkedin_connector/data/: demo_jobs.json
src/linkedin_connector/providers/: __init__.py  base.py  demo_provider.py  file_provider.py
tests/: test_matching.py
